Add builder for Redshift query runner